2000-01-05  Eskil Heyn Olsen  <deity@eskil.dk>

	* GnomeCal.idl: Added an argument to get_number_of_objects, so you 
	can choose which state the object should have
	(any/new/modified/...). Will also add one to choose type
	(event/journal etc).

	* corba-cal.c (cal_repo_get_number_of_objects): Implemented the
	new version of get_number_of_objects.

	* calendar-conduit.c (pre_sync): Calls various
 	gnome_pilot_conduit_standard_abs_set_num_yadayda to get progress bars.

2000-01-04  Eskil Heyn Olsen  <deity@eskil.dk>

	* calendar-conduit.c (start_calendar_server): Let's not call
	g_error, but g_warning instead.
	(pre_sync): Get record numbers info, total, new, deleted etc, and
	tell gpilotd.

1999-12-31  Eskil Heyn Olsen  <deity@eskil.dk>

	* eventedit.c (ee_store_recur_end_to_ical): Adds 86400 secs (1
	day) to the date chooses by the user. This ensures the recurrence
	also occurs on that date.
	(ee_rp_init_ending_date): And subtracts 86400 secs when about to
	redisplay the box.

	* calendar.h: Added an argument to calendar_new, to enable certain 
	features, such as initing alarms or nor.

	* calendar.c (calendar_new): Implemented support for the
	CALENDAR_INIT_ALARMS option to calendar_new.

	* corba-cal.c (cal_repo_get_updated_objects): Added
 	CALENDAR_INIT_ALARMS to calendar_new calls.

	* main.c: Added CALENDAR_INIT_ALARMS to calendar_new calls. This
 	should probably be CALENDAR_INIT_NIL, but I'm not sure, guess
 	steintr should check it.

	* gnome-cal.c: Added CALENDAR_INIT_ALARMS to calendar_new calls.

	* calendar-pilot-sync.c: Added CALENDAR_INIT_NIL to calendar_new calls.

1999-12-10  Russell Steinthal  <rms39@columbia.edu>

	* eventedit.c (ee_create_ae): Fix sensitivity bug when used to
	create default alarm box (widgets in that box should always be
	sensitive, even if the enabled checkbutton is not set)

1999-12-08  Eskil Heyn Olsen  <deity@eskil.dk>

	* calendar-conduit-control-applet.c (setSettings): Capplets now